--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "jsonfile": "^6.1.0",
     "moment": "^2.30.1",
+    "random-int": "^3.0.0",
     "simple-git": "^3.27.0"
   }
 }
